--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,2 +1,4 @@
 # September 2025
 <ins> Monday 1 September 2025 </ins> <br>
++ Went shopping for things for university.
++ Working through "CS50 Introduction to Programming with Python".
