--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -2,3 +2,4 @@
 <ins> Monday 1 September 2025 </ins> <br>
 + Went shopping for university things.
 + Working through "CS50 Introduction to Programming with Python".
++ Played some basketball.
