--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,5 +1,6 @@
 # September 2025
 <ins> Monday 1 September 2025 </ins> <br>
 + Went shopping for university things.
-+ Working through "CS50 Introduction to Programming with Python".
++ Played some GeoGuessr.
 + Played some basketball.
++ Working through "CS50 Introduction to Programming with Python".
