--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -3,4 +3,4 @@
 + Went shopping for university things.
 + Played some GeoGuessr.
 + Played some basketball.
-+ Working through "CS50 Introduction to Programming with Python".
++ Working through "CS50: Introduction to Programming with Python".
