--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,4 +1,7 @@
 # September 2025
+<ins> Tuesday 2 September 2025 </ins> <br>
++ Working through "CS50: Introduction to Programming with Python".
+
 <ins> Monday 1 September 2025 </ins> <br>
 + Went shopping for university things.
 + Played some GeoGuessr.
