--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,6 +1,7 @@
 # September 2025
 <ins> Wednesday 3 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
++ Working through the prepratory material for university.
 
 <ins> Tuesday 2 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
