--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,5 +1,6 @@
 # September 2025
 <ins> Wednesday 3 September 2025 </ins> <br>
++ Went shopping for university things.
 + Working through "CS50: Introduction to Programming with Python".
 + Working through the prepratory material for university.
 
