--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,4 +1,7 @@
 # September 2025
+
+<ins> Thursday 4 September 2025 </ins> <br>
+
 <ins> Wednesday 3 September 2025 </ins> <br>
 + Went shopping for university things.
 + Working through "CS50: Introduction to Programming with Python".
