--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,7 +1,9 @@
 # September 2025
+<ins> Friday 5 September 2025 </ins> <br>
++ Went out with a friend.
 
 <ins> Thursday 4 September 2025 </ins> <br>
-+ Went out with a friend around London.
++ Went out with a friend.
 
 <ins> Wednesday 3 September 2025 </ins> <br>
 + Went shopping for university things.
