--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,6 +1,9 @@
 # September 2025
+<ins> Saturday 6 September 2025 </ins> <br>
++ Working through "CS50: Introduction to Programming with Python".
+
 <ins> Friday 5 September 2025 </ins> <br>
-+ Went out with a friend.
++ Went out with some friends.
 
 <ins> Thursday 4 September 2025 </ins> <br>
 + Went out with a friend.
