--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,6 +1,7 @@
 # September 2025
 <ins> Saturday 6 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
++ Played some GeoGuessr.
 
 <ins> Friday 5 September 2025 </ins> <br>
 + Went out with some friends.
