--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -4,10 +4,10 @@
 + Played some GeoGuessr.
 
 <ins> Friday 5 September 2025 </ins> <br>
-+ Went out with some friends.
++ Went out with friends.
 
 <ins> Thursday 4 September 2025 </ins> <br>
-+ Went out with a friend.
++ Went out with friends.
 
 <ins> Wednesday 3 September 2025 </ins> <br>
 + Went shopping for university things.
