--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,7 +1,7 @@
 # September 2025
 <ins> Saturday 6 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
-+ Played some GeoGuessr.
++ Played GeoGuessr.
 
 <ins> Friday 5 September 2025 </ins> <br>
 + Went out with friends.
@@ -16,10 +16,10 @@
 
 <ins> Tuesday 2 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
-+ Played some GeoGuessr.
++ Played GeoGuessr.
 
 <ins> Monday 1 September 2025 </ins> <br>
 + Went shopping for university things.
-+ Played some GeoGuessr.
-+ Played some basketball.
++ Played GeoGuessr.
++ Played basketball.
 + Working through "CS50: Introduction to Programming with Python".
