--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -12,7 +12,7 @@
 <ins> Wednesday 3 September 2025 </ins> <br>
 + Went shopping for university things.
 + Working through "CS50: Introduction to Programming with Python".
-+ Working through the prepratory material for university.
++ Working through prepratory material for university.
 
 <ins> Tuesday 2 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
