--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -2,6 +2,7 @@
 <ins> Saturday 6 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
 + Played GeoGuessr.
++ Went to a birthday party.
 
 <ins> Friday 5 September 2025 </ins> <br>
 + Went out with friends.
