--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,5 +1,10 @@
 # September 2025
 <ins> Sunday 7 September 2025 </ins> <br>
++ Went for a haircut.
++ 5km run.
++ Working through "CS50: Introduction to Programming with Python".
+
+<ins> Sunday 7 September 2025 </ins> <br>
 + 5km run.
 + Played guitar.
 + Working through "CS50: Introduction to Programming with Python".
