--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,18 +1,20 @@
 # September 2025
-<ins> Sunday 7 September 2025 </ins> <br>
+<ins> Tuesday 9 September 2025 </ins> <br>
+
+<ins> Monday 8 September 2025 </ins> <br>
 + Went for a haircut.
 + 5km run.
 + Working through "CS50: Introduction to Programming with Python".
++ Played GeoGuessr with friends.
 
 <ins> Sunday 7 September 2025 </ins> <br>
 + 5km run.
 + Played guitar.
 + Working through "CS50: Introduction to Programming with Python".
 
-
 <ins> Saturday 6 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
-+ Played GeoGuessr.
++ Played GeoGuessr with friends.
 + Went to a birthday party.
 
 <ins> Friday 5 September 2025 </ins> <br>
@@ -28,10 +30,10 @@
 
 <ins> Tuesday 2 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
-+ Played GeoGuessr.
++ Played GeoGuessr with friends.
 
 <ins> Monday 1 September 2025 </ins> <br>
 + Went shopping for university things.
-+ Played GeoGuessr.
++ Played GeoGuessr with friends.
 + Played basketball.
 + Working through "CS50: Introduction to Programming with Python".
