--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,6 +1,8 @@
 # September 2025
 <ins> Tuesday 9 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
++ Played basketball.
++ Played GeoGuessr with friends.
 
 <ins> Monday 8 September 2025 </ins> <br>
 + Went for a haircut.
