--- a/journal/09-2025.md
+++ b/journal/09-2025.md
@@ -1,4 +1,7 @@
 # September 2025
+<ins> Wednesday 10 September 2025 </ins> <br>
++ Working through "CS50: Introduction to Programming with Python".
+
 <ins> Tuesday 9 September 2025 </ins> <br>
 + Working through "CS50: Introduction to Programming with Python".
 + Played basketball.
